--- a/SherpaDesk/SherpaDesk.csproj
+++ b/SherpaDesk/SherpaDesk.csproj
@@ -134,6 +134,8 @@
     <Compile Include="TicketDetails.xaml.cs">
       <DependentUpon>TicketDetails.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\Enum\eRoles.cs" />
+    <Compile Include="Models\Enum\eTicketStatus.cs" />
     <Compile Include="Models\Enum\eWorkListType.cs" />
     <Compile Include="Models\Constants.cs" />
     <Compile Include="Models\Enum\eRequestType.cs" />
