--- a/SherpaDesk/SherpaDesk.csproj
+++ b/SherpaDesk/SherpaDesk.csproj
@@ -142,6 +142,11 @@
       <DependentUpon>AddTicket.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\Enum\eErrorType.cs" />
+    <Compile Include="Models\Request\AddNoteRequest.cs" />
+    <Compile Include="Models\Request\DeleteRequest.cs" />
+    <Compile Include="Models\Request\PlaceOnHoldRequest.cs" />
+    <Compile Include="Models\Request\PutRequest.cs" />
+    <Compile Include="Models\Request\WaitingOnPostRequest.cs" />
     <Compile Include="Models\Response\ProjectResponse.cs" />
     <Compile Include="Organization.xaml.cs">
       <DependentUpon>Organization.xaml</DependentUpon>
